--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,52 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import random
+import numpy as np
+import matplotlib.pyplot as plt
 
-# C extensions
-*.so
+# Function to generate 500 random numbers with the specified mean and standard deviation
+def generate_random_numbers(mean, std_deviation, count):
+    random_numbers = [random.gauss(mean, std_deviation) for _ in range(count)]
+    return random_numbers
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Function to calculate the mean of a list of numbers
+def calculate_mean(numbers):
+    return sum(numbers) / len(numbers)
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Function to calculate the median of a list of numbers
+def calculate_median(numbers):
+    sorted_numbers = sorted(numbers)
+    n = len(sorted_numbers)
+    if n % 2 == 0:
+        middle1 = sorted_numbers[n // 2 - 1]
+        middle2 = sorted_numbers[n // 2]
+        median = (middle1 + middle2) / 2
+    else:
+        median = sorted_numbers[n // 2]
+    return median
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Function to calculate the standard deviation of a list of numbers
+def calculate_std_deviation(numbers, mean):
+    squared_diff = [(x - mean) ** 2 for x in numbers]
+    variance = sum(squared_diff) / len(numbers)
+    std_deviation = variance ** 0.5
+    return std_deviation
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Generate random numbers
+random_numbers = generate_random_numbers(10, 0.5, 500)
 
-# Translations
-*.mo
-*.pot
+# Calculate mean, median, and standard deviation
+mean = calculate_mean(random_numbers)
+median = calculate_median(random_numbers)
+std_deviation = calculate_std_deviation(random_numbers, mean)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Print the results
+print("Mean:", mean)
+print("Median:", median)
+print("Standard Deviation:", std_deviation)
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Plot the histogram
+plt.hist(random_numbers, bins=10, edgecolor='black')
+plt.title('Histogram of Random Numbers')
+plt.xlabel('Value')
+plt.ylabel('Frequency')
+plt.show()
 
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
